[tool.poetry]
name = "ai-playground"
version = "0.1.0"
description = ""
authors = ["Tamas Szanto <tszanto@hearsaycorp.com>"]
readme = "README.md"
packages = [{include = "ai_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.100"
botocore = "^1.34.100"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
